--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.1.6", features = ["derive"] }
 handlebars = { version = "4.3.6", features = ["dir_source"] }
+pulldown-cmark = { version = "0.9.2" }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 toml = "0.7.2"
