--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+blake3 = "1.3.3"
 clap = { version = "4.1.6", features = ["derive"] }
 handlebars = { version = "4.3.6", features = ["dir_source"] }
 pulldown-cmark = { version = "0.9.2" }
@@ -14,5 +15,5 @@ serde_json = "1.0.93"
 toml = "0.7.2"
 
 [features]
-default = ["recursive"]
-recursive = []
+default = ["sass"]
+sass = []
