--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,10 @@ pulldown-cmark = { version = "0.9.2" }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 toml = "0.7.2"
+yaml-front-matter = "0.1.0"
 
+
+# FIXME: Change this to a configuration option
 [features]
 default = ["sass"]
 sass = []
