--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 blake3 = "1.3.3"
 clap = { version = "4.1.6", features = ["derive"] }
 handlebars = { version = "4.3.6", features = ["dir_source"] }
+lazy_static = "1.4.0"
 pulldown-cmark = { version = "0.9.2" }
+regex = "1.7.1"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 toml = "0.7.2"
