--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 blake3 = "1.3.3"
 clap = { version = "4.1.6", features = ["derive"] }
+emojis = "0.5.2"
 handlebars = { version = "4.3.6", features = ["dir_source"] }
 lazy_static = "1.4.0"
 pulldown-cmark = { version = "0.9.2" }
