--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,5 @@ yaml-front-matter = "0.1.0"
 
 # FIXME: Change this to a configuration option
 [features]
-default = []
+default = ["sass"]
 sass = []
