--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,20 @@ name = "wawatemplating"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
+codegen-units = 1
 
 [dependencies]
 blake3 = "1.3.3"
 clap = { version = "4.1.6", features = ["derive"] }
 emojis = "0.5.2"
+git2 = "0.16.1"
 handlebars = { version = "4.3.6", features = ["dir_source"] }
+home = "0.5.4"
 lazy_static = "1.4.0"
 pulldown-cmark = { version = "0.9.2" }
 regex = "1.7.1"
@@ -17,7 +24,6 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 toml = "0.7.2"
 yaml-front-matter = "0.1.0"
-
 
 # FIXME: Change this to a configuration option
 [features]
