--- a/cliff.toml
+++ b/cliff.toml
@@ -18,7 +18,7 @@ body = """
 {% for group, commits in commits | group_by(attribute="group") %}
     ### {{ group | upper_first }}
     {% for commit in commits %}
-        - {% if commit.breaking %}[**breaking**] {% endif %} {% if commit.message is ending_with("(desc.)") %}{{ commit.message | upper_first | trim_end_matches(pat="(desc.)") }}[`{{ commit.id | truncate(length=7, end="") }}`](https://github.com/orhun/git-cliff/commit/{{ commit.id }})
+        - {% if commit.breaking %}[**breaking**] {% endif %} {% if commit.message is ending_with("(desc.)") %}{{ commit.message | upper_first | trim_end_matches(pat="(desc.)") }}[(desc. at `{{ commit.id | truncate(length=7, end="") }}`)](https://github.com/orhun/git-cliff/commit/{{ commit.id }})
 		{% else %}{{ commit.message }}
 		{% endif %} \
     {% endfor %}
