--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ blake3 = "1.3.3"
 clap = { version = "4.1.6", features = ["derive"] }
 emojis = "0.5.2"
 handlebars = { version = "4.3.6", features = ["dir_source"] }
+hashbrown = { version = "0.13.2", features = ["serde"] }
 home = "0.5.4"
 lazy_static = "1.4.0"
 pulldown-cmark = { version = "0.9.2" }
