--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wawatemplating"
-version = "0.6.1"
+version = "0.6.2"
 edition = "2021"
 
 
@@ -11,6 +11,7 @@ lto = true
 codegen-units = 1
 
 [dependencies]
+anyhow = "1.0.69"
 blake3 = "1.3.3"
 clap = { version = "4.1.6", features = ["derive"] }
 emojis = "0.5.2"
