--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ regex = "1.7.1"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 toml = "0.7.2"
+walkdir = "2.3.2"
 yaml-front-matter = "0.1.0"
 
 
