--- a/templates/routing/Cargo.toml
+++ b/templates/routing/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.4.11"
+rocket = "0.5.0-rc.2"
+rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
