chore(general): Update deps, move default config files to their own dir, update Cargo.toml and .gitignore to exclude .idea

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,12 @@ include = [
 	"Cargo.lock",
 	"README.md",
 	"src/*",
-	"cuteconfig.default.toml",
-	"SUMMARY.default.toml",
-	"introduction.default.md",
+  "defaults/*",
 	"assets/*"
+]
+
+exclude = [
+  ".idea/*"
 ]
 
 [profile.release]
