--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,17 +9,15 @@ readme = "README.md"
 keywords = ["cuteness", "web", "site", "generator", "codegen"]
 categories = ["web-programming"]
 include = [
-	"Cargo.toml",
-	"Cargo.lock",
-	"README.md",
-	"src/*",
-  "defaults/*",
-	"assets/*"
+    "Cargo.toml",
+    "Cargo.lock",
+    "README.md",
+    "src/*",
+    "defaults/*",
+    "assets/*",
 ]
 
-exclude = [
-  ".idea/*"
-]
+exclude = [".idea/*"]
 
 [profile.release]
 strip = true
@@ -31,14 +29,14 @@ codegen-units = 1
 anyhow = "1.0.70"
 blake3 = "1.3.3"
 clap = { version = "4.1.13", features = ["derive"] }
-document-features = "0.2.7" 
+document-features = "0.2.7"
 emojis = "0.5.2"
 handlebars = { version = "4.3.6", features = ["dir_source"] }
-hashbrown = { version = "0.13.2", features = ["serde"] }
 home = "0.5.4"
 lazy_static = "1.4.0"
 pulldown-cmark = { version = "0.9.2" }
 regex = "1.7.3"
+rustc-hash = "2.0.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 toml = "0.7.3"
@@ -50,7 +48,7 @@ yaml-front-matter = "0.1.0"
 default = ["sass"]
 #! ### Features
 ## Enables using *[Sass](https://sass-lang.com/)* as a preprocessor. It will preprocess your `.sass` files in `src/static` before copying them to the output directory.
-## 
+##
 ## As a side effect, it also enables the configuration option `sassbin`[^2]
 ##
 ## [^2]: The option `sassbin` indicates the name of the Sass preprocessor binary. *(default: `sass`)*
